# Fastapi-crud-sort-pagination

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: person.py
backend/app/model/: person.py
backend/app/repository/: person.py
backend/migrations/: env.py
backend/migrations/versions/: d84b505c63e5_init_table.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  BaseDesign.js
