[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lemoncode21 <lemoncode21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
sqlmodel = "^0.0.8"
sqlalchemy = "1.4.41"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
pydantic = "^1.10.2"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"
